end of lasson 12.01.22

--- a/Computer-Shop/src/index.html
+++ b/Computer-Shop/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>loading...</app-root>
+  <app-main><img src="https://www.stickdecor.co.il/files/products/image3_902_2015-11-26_10-24-53.png"></app-mian>
 </body>
 </html>
