--- a/Computer-Shop/src/index.html
+++ b/Computer-Shop/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-main><img src="https://www.stickdecor.co.il/files/products/image3_902_2015-11-26_10-24-53.png"></app-mian>
+  <app-main><div class="loading"><img src="https://www.stickdecor.co.il/files/products/image3_902_2015-11-26_10-24-53.png"></div></app-mian>
 </body>
 </html>
